move menu button to the other side to avoid overlap

--- a/style.css
+++ b/style.css
@@ -14,21 +14,16 @@ header{
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: end;
     padding: 33px 9%;
     background-color: transparent;
     backdrop-filter: blur(0.3rem) brightness(95%);
 }
-/* This is used when the logo in the topleft is just a word .logo{
-    font-size: 30px;
-    font-weight: 700;
-    color: white;
-} */
 
 .logo {
     position: fixed; /* Set the position to fixed */
     top: 0; /* Position it at the top of the viewport */
-    left: 10; /* Position it at the left of the viewport */
+    left: 10px; /* Position it at the left of the viewport */
     z-index: 9999; /* Optional: Adjust the z-index as needed to control stacking */
     padding: 20px; /* Optional: Add padding for spacing */
 }
